// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with auto focus 1`] = `
<div
  className="root-0-1-1"
>
  <input
    autoFocus={true}
    className="input-0-1-2 "
    disabled={false}
    value="Hello IB"
  />
  
</div>
`;

exports[`Renders correctly with disabled 1`] = `
<div
  className="root-0-1-1"
>
  <input
    autoFocus={false}
    className="input-0-1-2 "
    disabled={true}
    value="Hello IB"
  />
  
</div>
`;

exports[`Renders correctly with empty value 1`] = `
<div
  className="root-0-1-1"
>
  <input
    autoFocus={false}
    className="input-0-1-2 "
    disabled={false}
    value=""
  />
  
</div>
`;

exports[`Renders correctly with error 1`] = `
<div
  className="root-0-1-1"
>
  <input
    autoFocus={false}
    className="input-0-1-2 inputError-0-1-3"
    disabled={false}
    value="Hello IB"
  />
  <span
    className="errorText-0-1-4"
  >
    This field is require
  </span>
</div>
`;

exports[`Renders correctly with value 1`] = `
<div
  className="root-0-1-1"
>
  <input
    autoFocus={false}
    className="input-0-1-2 "
    disabled={false}
    value="Hello IB"
  />
  
</div>
`;
